--- a/ansible/playbooks/git-repos.yaml
+++ b/ansible/playbooks/git-repos.yaml
@@ -24,6 +24,7 @@
       - "git@ssh.dev.azure.com:v3/EpichouseCloud/DS/terraform-cloudflare"
       - "git@ssh.dev.azure.com:v3/EpichouseCloud/DS/pipeline-templates"
       - "git@ssh.dev.azure.com:v3/EpichouseCloud/DS/app-snake"
+      - "git@ssh.dev.azure.com:v3/EpichouseCloud/DS/terraform-acr"
   tasks:
     - ansible.builtin.file:
         path: "{{ git }}"
