--- a/ansible/playbooks/wsl.yaml
+++ b/ansible/playbooks/wsl.yaml
@@ -1,3 +1,9 @@
+# WSL Configuration Playbook
+
+# Use Tags to select the one of the sections below:
+  # apt - Software Installation
+  # git - Development Git Repository Configuration
+
 - name: Localhost Git Config
   hosts: localhost
   vars:
@@ -25,12 +31,35 @@
       - "git@ssh.dev.azure.com:v3/EpichouseCloud/DS/pipeline-templates"
       - "git@ssh.dev.azure.com:v3/EpichouseCloud/DS/app-snake"
   tasks:
+    - name: Global Utility Installation
+      become: true
+      tags: apt
+      ansible.builtin.apt:
+        pkg: 
+        - git
+        - just
+        - neofetch
+        - stress
+        - fio
+        - gnupg
+        - curl
+        - ca-certificates
+        - unzip
+        - htop
+        - git
+        - net-tools
+        - nfs-common
+        - cifs-utils
+        - rsync
+        - tmux
     - ansible.builtin.file:
         path: "{{ git }}"
         state: directory
+      tags: git
     - ansible.builtin.git:
         repo: "{{ item }}"
         dest: "{{ git }}/{{ item | basename | replace('.git', '') }}"
         update: yes
       ignore_errors: "{{ ansible_check_mode }}"
       with_items: "{{repos}}"
+      tags: git
