Added Ansible Storage Repo

--- a/ansible/playbooks/wsl.yaml
+++ b/ansible/playbooks/wsl.yaml
@@ -32,6 +32,7 @@
       - "git@github.com:epichouse/infrastructure.git"
       - "git@github.com:epichouse/ansible-dns.git"
       - "git@github.com:epichouse/ansible-docker.git"
+      - "git@github.com:epichouse/ansible-storage.git"
 
   tasks:
     - name: Utility Installation
