Removed Ansible subdir

--- a/ansible/playbooks/wsl.yaml
+++ b/ansible/playbooks/wsl.yaml
@@ -28,7 +28,6 @@
       - "git@ssh.dev.azure.com:v3/EpichouseCloud/DS/pipeline-templates"
       - "git@ssh.dev.azure.com:v3/EpichouseCloud/DS/app-snake"
       - "git@ssh.dev.azure.com:v3/EpichouseCloud/DS/terraform-logging"
-    ansible_repos:
       - "git@github.com:epichouse/ansible-core.git"
       - "git@github.com:epichouse/ansible-dns.git"
       - "git@github.com:epichouse/ansible-docker.git"
@@ -62,12 +61,7 @@
         path: "{{ git }}"
         state: directory
       tags: git,ansible
-    - name: Create Ansible Git Subdirectory
-      ansible.builtin.file:
-        path: "{{ git }}/ansible"
-        state: directory
-      tags: git,ansible
-    - name: Clone Standard Repos
+    - name: Clone Repos
       ansible.builtin.git:
         repo: "{{ item }}"
         dest: "{{ git }}/{{ item | basename | replace('.git', '') }}"
@@ -75,11 +69,3 @@
       ignore_errors: "{{ ansible_check_mode }}"
       with_items: "{{ repos }}"
       tags: git
-    - name: Clone Ansible Repos
-      ansible.builtin.git:
-        repo: "{{ item }}"
-        dest: "{{ git }}/ansible/{{ item | basename | replace('.git', '') }}"
-        update: yes
-      ignore_errors: "{{ ansible_check_mode }}"
-      with_items: "{{ ansible_repos }}"
-      tags: git,ansible
