--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -17,8 +17,8 @@ jobs:
       run:
         working-directory: ./
     steps:
-      - name: Remove previous builds
-        run: docker image rm ${{ env.registry }}/${{ env.owner }}/${{ env.image_name }}:latest
+      # - name: Remove previous builds
+      #   run: docker image rm ${{ env.registry }}/${{ env.owner }}/${{ env.image_name }}:latest
       - name: Check out repository code
         uses: actions/checkout@v4
       - name: Create Index File
