--- a/.gitea/workflows/build.yaml
+++ b/.gitea/workflows/build.yaml
@@ -7,7 +7,7 @@ on:
 env:
   image_name: snippets
   build_path: ./
-  registry: gitea.internal.epichouse.co.uk
+  registry: gitea.epichouse.co.uk
   owner: dan
 
 jobs:
